welcome.lessons.welcome.array.array123.Array123.scala.error
array123:7: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( nums(i)=1) {
                            ^array123:10: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( nums(i)=2) {
                            ^array123:13: error: type mismatch;
 found   : Unit
 required: Boolean
		if ( nums(i)=3) {
                            ^array123:17: error: value && is not a member of Int
		if (n1=1 && n2=1 && n3=1) {
                         ^array123:17: error: type mismatch;
 found   : Unit
 required: Boolean
		if (n1=1 && n2=1 && n3=1) {
                      ^array123:6: error: type mismatch;
 found   : Unit
 required: Boolean
	for (i<- 0 to nums.length-1) {
              ^